// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processor applies the nest-atrules plugin 1`] = `
"
      .root {
        color: red;
      @media (min-width: 10px) {
          display: block
      }
      }
    "
`;

exports[`processor applies the nest-pseudo plugin 1`] = `
"
      .a {
      :hover {
        color: red;
      }
      }
      .b {
      :hover {
        color: hotpink
      }
      }
      .b {
        color: hotpink
      }
      .c {
        color: red;
      }
      .c {
      :hover > & {
        display: block;
      }
      }
    "
`;

exports[`processor applies the split-grouped-selectors plugin 1`] = `
"
      .a {
        color: red;
      }
      .b {
        color: red;
      }
    "
`;

exports[`processor merges rules 1`] = `
"
      .root {
      :hover {
        color: yellow;
      }
      }

      .block {
        display: block;
        margin-top: 10px;
      }

      .root {
        color: red;
        font-family: Verdana;
        display: block;

      @media (min-width: 600px) {
          color: green
      }
      }

      .test {
        color: red;
        color: pink;

      @media (min-width: 600px) {
          color: green;
          color: yellow
      }
      }
    "
`;

exports[`processor mixed nest-atrules and nest-pseudo 1`] = `
"
        .a {
        :hover {
      @media (min-width: 10px) {
          color: red
      }
        }
        }
    "
`;

exports[`processor moves at rules at the end of the file 1`] = `
"
      div { color: red }
      :hover > .foo { color: red }
      @media (min-width: 1px) { body { color: red } }
      @media (min-width: 10px) { body { color: gree } }
    "
`;
